--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 header{
     background-image: linear-gradient(#de2673, #fa4b38);
     height: auto;
-    padding: 10px 0;
+    padding: 10px 0 60px 0;
 }
 header a {
     font-family: var(--Sniglet-font);
@@ -38,7 +38,7 @@ header .content h1 {
 }
 .section-1 {
     padding: 100px 0;
-   /* overflow-y: scroll; */
+   overflow-y: auto;
 }
 
 .section-1-img {
@@ -50,16 +50,7 @@ header .content h1 {
     opacity: 0.8;
     border-radius: 3px;
 }
-/* .section-1 .row .col-md-6 .panel {
-    padding: 13vmin 5vmin 20vmin 10vmin;
-    position: absolute;
-    top: 7vmin;
-    left: -18vmin;
-    box-shadow: 0px 25px 42px rgb(0 0 0 / 20%);
-    z-index: 1;
-    background-color: #fff;
-    width: 100%;
-} */
+
 .section-1 .row .col-md-6:last-child {
     position: relative;
   }
@@ -70,14 +61,14 @@ header .content h1 {
     background: white;
     border-radius: 3px;
     text-align: left;
-    padding: 13vmin 5vmin 20vmin 10vmin;
+    padding: 13vmin 5vmin 10vmin 10vmin;
     box-shadow: 0px 25px 42px rgb(0 0 0 / 20%);
     z-index: 1;
-    width: 100%; 
+    width: 100%;
 }
 
 .panel p {
-    font-size: 14.4px;
+    font-size: 18px;
     opacity: 0.6;
     line-height: 1.2;
 }
@@ -93,25 +84,24 @@ header .content h1 {
 }
 .cover .content {
     color: #fff;
-    padding: 150px;
+    padding-top: 19vmin;
     width: 100%;
     height: 100%;  
     background-color: rgba(0, 0, 0, 0.7);
 }
 .number {
-    margin-top: -13vmin;
-    z-index: 1;
-    
+    margin-top: -11vmin;
+    z-index: 1;  
 }
-.rect {   
-    padding: 20px;
+.rect {  
+    padding: 15px 5px;
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 1px 2px 50px 0px rgb(255 0 0 / 35%);
     margin-bottom: 10vmin;
 }
 .rect h1 {
-    font-size: 70px;
+    font-size: 4rem;
     color: #fa4b38;
 }
 .rect p {
@@ -128,7 +118,7 @@ header .content h1 {
 }
 .card-title{
     padding: 15px 0;
-    background-color: rgba(208, 241, 241, 0.199);;
+    background-color: rgba(208, 241, 241, 0.199);
 }
 .card-text {
    padding: 20px 48px;
@@ -169,8 +159,8 @@ header .content h1 {
 .section-3 .desktop{
     border-radius: 3em;
     padding: 15px 40px;
-    margin: 0 10px;
-    
+    /* margin: 0 10px; */
+    width: 270px;
 }
 .avatar-carousel{
     width: 40%;
@@ -191,6 +181,10 @@ header .content h1 {
 .section-4 .content h1 {
     padding: 30px 0 15px 0;
     font-size: 30px;
+}
+.section-4 .job a{
+    padding: 30px 0 15px 0;
+    font-size: 20px;
 }
 .section-4 .content p{
     opacity: 0.8;
